--- a/Martify/Resources/XAML/ImageRes.xaml
+++ b/Martify/Resources/XAML/ImageRes.xaml
@@ -23,11 +23,18 @@
 
     <!--Dashboard-->
     <BitmapImage x:Key="DashboardNormal" UriSource="/Resources/Images/dashboard_normal.png"></BitmapImage>
+    <BitmapImage x:Key="DashboardHover" UriSource="/Resources/Images/dashboard_hover.png"></BitmapImage>
     <BitmapImage x:Key="DashboardActive" UriSource="/Resources/Images/dashboard_active.png"></BitmapImage>
    
+    <!--Cart / ProductSelection-->
+    <BitmapImage x:Key="CartNormal" UriSource="/Resources/Images/cart_normal.png"></BitmapImage>
+    <BitmapImage x:Key="CartHover" UriSource="/Resources/Images/cart_hover.png"></BitmapImage>
+    <BitmapImage x:Key="CartActive" UriSource="/Resources/Images/cart_active.png"></BitmapImage>
+    
     <!--Products-->
-    <BitmapImage x:Key="ProductsNormal" UriSource="/Resources/Images/products_normal.png"></BitmapImage>
-    <BitmapImage x:Key="ProductsActive" UriSource="/Resources/Images/products_active.png"></BitmapImage>
+    <BitmapImage x:Key="ProductsNormal" UriSource="/Resources/Images/product_normal.png"></BitmapImage>
+    <BitmapImage x:Key="ProductsHover" UriSource="/Resources/Images/product_hover.png"></BitmapImage>
+    <BitmapImage x:Key="ProductsActive" UriSource="/Resources/Images/product_active.png"></BitmapImage>
     
     <!--Staff-->
     <BitmapImage x:Key="StaffNormal" UriSource="/Resources/Images/staff_normal.png"></BitmapImage>
